# docx-shrinker

./: README.md  pyproject.toml
.github/workflows/: python-publish.yml
src/docx_shrinker/: __init__.py  cli.py  core.py
tests/: test_pure_functions.py
